src/objects/Certification_Test__c.object
<CustomObject>
    <fields>
        <fullName>Certification_Name__c</fullName>
        <description>Name of the parent record(certification) of the certification test which is pulled from the Certification record.</description>
        <formula>Certification__r.Certification_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <description>Parent record of the Certification Test. Displays as the Certification__r.Name ie the "Certification ID" field.</description>
        <label>Certification</label>
        <referenceTo>Certification__c</referenceTo>
        <relationshipLabel>Certification Tests</relationshipLabel>
        <relationshipName>Certification_Tests1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dependencies__c</fullName>
        <label>Dependencies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Engineer__c</fullName>
        <label>Partner Engineer</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pivotal_Engineer__c</fullName>
        <label>Pivotal Engineer</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Date Testing Begun</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process - Pending Pivotal</fullName>
                </value>
                <value>
                    <fullName>In Process - Pending Partner</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Self Certification</fullName>
                </value>
                <value>
                    <fullName>Pivotal Certification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Captures details around the related testing around a certification.

Not all certifications have to have a certification test record.</description>
    <label>Certification Test</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Certification Test ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certification Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>